deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    service: django-gunicorn-nginx
  name: django-gunicorn-nginx-deploy
  namespace: aw-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      service: django-gunicorn-nginx
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        service: django-gunicorn-nginx
    spec:
      containers:
        - env:
            - name: DEBUG
              valueFrom:
                configMapKeyRef:
                  key: DEBUG
                  name: env
            - name: SECRET_KEY
              valueFrom:
                configMapKeyRef:
                  key: SECRET_KEY
                  name: env
          image: nginx-django-gunicorn-image:0.1
          imagePullPolicy: IfNotPresent 
          name: nginx-django-gunicorn-web-container
          ports:
            - containerPort: 8081
          resources: {}
          volumeMounts:
            - mountPath: /static
              name: static
      hostname: nginx-django-gunicorn-host
      restartPolicy: Always
      volumes:
        - name: static
          persistentVolumeClaim:
            claimName: static
status: {}
