service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: django-gunicorn-nginx
  name: django-gunicorn-nginx-service
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
  selector:
    service: django-gunicorn-nginx
status:
  loadBalancer: {}
