ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-server
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "awdemo.com"
    http:
      paths:
      - path: /
        pathType: "Prefix"
        backend:
          serviceName: "django-gunicorn-nginx-service"
          servicePort: 8081
